style.css
:root {
  --background: #333333;
  --text: #ffffff;
  --border: #d6d6d6;
  --card-bg: #ffffff;
  --card-text: #333333;
  --highlight: #ea00ff;
  --social-icons: 1;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
  background-color: var(--background);
  color: var(--text);
}

body {
  background-color: transparent;
  color: transparent;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-inline: 2rem;
  padding-block: 1rem;
  background-color: var(--background);
  color: var(--text);
  font-family: "Poppins", sans-serif;
  border-bottom: var(--border) solid 1px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

/* Add this new style for the theme toggle button */
#theme-toggle {
  padding: 0.5rem 1rem;
  background-color: transparent;
  color: var(--text);
  border: none;
  border-radius: 32px;
  cursor: pointer;
  font-size: 1.2rem;
  transition: all 0.3s ease-in-out;
}

#theme-toggle:hover {
  transform: scale(1.1);
}

header h1 {
  font-size: 1.5rem;
}
nav {
  flex: 1;
  display: flex;
  justify-content: center;
  margin-right: 2%;
}

nav ul {
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
}

nav ul li {
  margin: 0 1rem;
}

nav ul li a {
  text-decoration: none;
  background-color: transparent;
  border-bottom: solid transparent;
  transition: all 0.3s ease-in-out;
  font-size: 1rem;
  font-weight: 500;
  font-family: "Poppins", sans-serif;
  text-align: center;
}

nav ul li a:hover,
nav ul li a.active {
  color: #ea00ff;
  border-bottom: solid #ea00ff;
}

main {
  background-color: #333;
  color: #fff;
  font-family: "Poppins", sans-serif;
}

section {
  min-height: 100vh;
  padding-inline: 2rem;
  padding-block: 1rem;
}

.hero {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  justify-content: center;
  gap: 8rem;
  font-family: "Poppins", sans-serif;
}

.content {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.content p {
  font-size: 1.5rem;
}

.content h2 {
  font-size: 3rem;
}

.content span {
  color: #ea00ff;
  font-size: 3.5rem;
}

.hero .profile {
  border-radius: 50%;
  width: 32vw;
}

.social {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.social img {
  width: 32px;
  cursor: pointer;
  background-color: transparent !important; /* Fundo transparente */
  filter: brightness(0) invert(var(--social-icons)); /* Filtro dinâmico */
}

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 2rem;
  font-family: "Poppins", sans-serif;
}

.line {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 2rem;
}

.line img {
  width: 32vw;
}

.about p {
  font-size: 1.5rem;
  font-family: "Poppins", sans-serif;
}

.about p span {
  font-style: italic;
  font-weight: 600;
  color: #ea00ff;
}

.skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 2rem;
  font-family: "Poppins", sans-serif;
}

.skills p {
  text-align: center;
  font-size: 1.5rem;
  font-family: "Poppins", sans-serif;
}

.cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-content: center;
  align-items: center;
  gap: 6rem;
}

.card {
  width: 13rem;
  display: flex;
  flex-direction: column;
  border-radius: 32px;
  align-items: center;
  justify-content: center;
  padding: 2rem;
  gap: 1rem;
  box-shadow: 0px 4px 8px #ea00ff33;
  background-color: var(--card-bg);
  font-family: "Poppins", sans-serif;
  transition: all 0.3s ease-in-out;
}

.card:hover {
  box-shadow: 0px 8px 16px #ea00ff68;
  transform: scale(1.05);
}

.card h3 {
  color: var(--card-text);
  background-color: transparent;
  font-size: 2rem;
  font-family: "Poppins", sans-serif;
}

.card img {
  height: 96px;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
}

.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 1rem;
  font-family: "Poppins", sans-serif;
}

.projects p {
  text-align: center;
  font-size: 1.5rem;
  font-family: "Poppins", sans-serif;
}

.projects .projects-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch; /* Mudança aqui */
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 2rem;
  font-family: "Poppins", sans-serif;
}

.project {
  display: flex;
  flex-direction: column;
  justify-content: center; /* Mudança aqui */
  align-items: start;
  padding-inline: 2rem;
  padding-block: 2rem;
  flex: 1; /* Adição importante */
  max-width: 33.33%; /* Adição importante */
  gap: 2rem;
  background-color: var(--card-bg);
  border-radius: 32px;
  box-shadow: 0px 4px 8px #ea00ff33;
  font-family: "Poppins", sans-serif;
  transition: all 0.3s ease-in-out;
}
.project:hover {
  box-shadow: 0px 8px 16px #ea00ff68;
  transform: scale(1.05);
}

.project img {
  height: 96px;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
}

.project h3 {
  color: var(--card-text);
  font-size: 2rem;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
}

.project p {
  color: var(--card-text);
  font-size: 1.5rem;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
  text-align: left;
}

.project .tecnologias {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: start;
  gap: 1rem;
  background-color: transparent;
  color: #333;
  font-family: "Poppins", sans-serif;
}

.project .tecnologias p {
  color: #fff;
  padding: 0.5rem 1rem;
  font-size: 0.75rem;
  background-color: #ea00ff;
  border-radius: 100px;
  font-family: "Poppins", sans-serif;
}

.formacao {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-inline: 2rem;
  padding-block: 1rem;
  gap: 5rem;
  font-family: "Poppins", sans-serif;
}

.formacao p {
  text-align: center;
  font-size: 1rem;
  font-family: "Poppins", sans-serif;
}

.formacao p span {
  color: #ea00ff;
  font-style: italic;
  font-weight: 600;
}

.formacao .info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  gap: 1rem;
}

.formacao .info img {
  width: 20vw;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
  transition: all 0.3s ease-in-out;
}

.formacao .info h3 {
  color: var(--text);
  font-size: 1rem;
  text-align: center;
  background-color: transparent;
  font-family: "Poppins", sans-serif;
  transition: all 0.3s ease-in-out;
}

@media (max-width: 1024px) {
  header h1 {
    font-size: 1rem;
  }

  h2 {
    margin-top: 80px;
  }

  .hero {
    gap: 1rem;
  }

  .content h2 {
    font-size: 2rem;
  }

  .content span {
    font-size: 2.5rem;
  }

  .line {
    flex-direction: column-reverse;
  }

  .cards {
    grid-template-columns: repeat(2, 1fr);
  }

  .project {
    width: 100%;
    height: 100%;
  }

  .project img {
    height: 64px;
  }

  .projects .projects-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-inline: 2rem;
    padding-block: 1rem;
    gap: 2rem;
    font-family: "Poppins", sans-serif;
  }

  .project {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    padding-inline: 2rem;
    padding-block: 2rem;
    flex: 1;
    max-width: 100%;
    gap: 2rem;
    background-color: var(--card-bg);
    border-radius: 32px;
    box-shadow: 0px 4px 8px #ea00ff33;
    color: var(--card-text);
    font-family: "Poppins", sans-serif;
    transition: all 0.3s ease-in-out;
  }
}

@media (max-width: 768px) {
  nav {
    display: none;
  }

  .hero {
    flex-direction: column-reverse;
    gap: 2rem;
    justify-content: center;
    align-items: center;
  }

  .hero span {
    font-size: 2.5rem;
  }

  .hero .content {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  .content h2 {
    font-size: 2rem;
    text-align: center;
  }

  .content p {
    font-size: 1.5rem;
    text-align: center;
  }

  .about p {
    text-align: center;
  }

  .cards {
    grid-template-columns: repeat(1, 1fr);
  }

  .line img {
    display: none;
  }
}

